--- a/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
+++ b/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
@@ -40,36 +40,71 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfR-oa-3UZ" userLabel="login">
-                                            <rect key="frame" x="75" y="27" width="329" height="16"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" systemColor="systemGrayColor"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FW2-vC-x9G" userLabel="language" customClass="PaddingLabel" customModule="iOSEngineerCodeCheck" customModuleProvider="target">
+                                            <rect key="frame" x="75" y="42" width="44" height="15"/>
+                                            <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="15" id="Onv-9t-6vk"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingLeft">
+                                                    <real key="value" value="7"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingRight">
+                                                    <real key="value" value="7"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingTop">
+                                                    <real key="value" value="0.0"/>
+                                                </userDefinedRuntimeAttribute>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingBottom">
+                                                    <real key="value" value="0.0"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOG-FP-9X1" userLabel="name">
-                                            <rect key="frame" x="75" y="5" width="329" height="20"/>
+                                            <rect key="frame" x="75" y="4" width="329" height="25"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="Bnd-pi-aEu"/>
+                                                <constraint firstAttribute="height" constant="25" id="k0E-x6-vQU"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfR-oa-3UZ" userLabel="login">
+                                            <rect key="frame" x="75" y="25" width="329" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16" id="vcn-VJ-y6g"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" systemColor="systemGrayColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="UOG-FP-9X1" firstAttribute="top" secondItem="k29-jL-IM1" secondAttribute="top" constant="5" id="2Sd-WW-wfq"/>
-                                        <constraint firstItem="yfR-oa-3UZ" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="BP5-Y9-AvO"/>
-                                        <constraint firstAttribute="trailing" secondItem="yfR-oa-3UZ" secondAttribute="trailing" constant="10" id="BVw-Xu-EKt"/>
+                                        <constraint firstItem="yfR-oa-3UZ" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="31B-sr-yzA"/>
+                                        <constraint firstAttribute="bottom" secondItem="FW2-vC-x9G" secondAttribute="bottom" constant="8" id="4Vd-tm-G76"/>
                                         <constraint firstItem="c81-3m-xhE" firstAttribute="leading" secondItem="k29-jL-IM1" secondAttribute="leading" constant="10" id="EDT-XP-T58"/>
-                                        <constraint firstAttribute="trailing" secondItem="UOG-FP-9X1" secondAttribute="trailing" constant="10" id="J5I-zj-xfR"/>
                                         <constraint firstItem="c81-3m-xhE" firstAttribute="top" secondItem="k29-jL-IM1" secondAttribute="top" constant="5" id="KWp-8L-PBz"/>
-                                        <constraint firstItem="UOG-FP-9X1" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="WtQ-Qh-n52"/>
+                                        <constraint firstAttribute="trailing" secondItem="yfR-oa-3UZ" secondAttribute="trailing" constant="10" id="Tgw-99-UrK"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="FW2-vC-x9G" secondAttribute="trailing" constant="20" symbolic="YES" id="XHx-bM-KVm"/>
+                                        <constraint firstItem="UOG-FP-9X1" firstAttribute="top" secondItem="k29-jL-IM1" secondAttribute="top" constant="4" id="bv6-JD-KgR"/>
+                                        <constraint firstItem="yfR-oa-3UZ" firstAttribute="top" secondItem="k29-jL-IM1" secondAttribute="top" constant="25" id="gSu-8z-9sy"/>
+                                        <constraint firstItem="FW2-vC-x9G" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="iEL-1Y-7b8"/>
                                         <constraint firstAttribute="bottom" secondItem="c81-3m-xhE" secondAttribute="bottom" constant="5" id="pDQ-7Q-15K"/>
-                                        <constraint firstItem="yfR-oa-3UZ" firstAttribute="top" secondItem="UOG-FP-9X1" secondAttribute="bottom" constant="2" id="ukc-Yq-cCu"/>
+                                        <constraint firstItem="FW2-vC-x9G" firstAttribute="top" secondItem="yfR-oa-3UZ" secondAttribute="bottom" constant="1" id="swr-5J-hrY"/>
+                                        <constraint firstAttribute="trailing" secondItem="UOG-FP-9X1" secondAttribute="trailing" constant="10" id="tka-oS-Lk3"/>
+                                        <constraint firstItem="UOG-FP-9X1" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="udU-Xm-7TD"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="avatarImage" destination="c81-3m-xhE" id="jpR-1H-zIG"/>
+                                    <outlet property="languageLabel" destination="FW2-vC-x9G" id="FzO-Na-6Rj"/>
                                     <outlet property="loginLabel" destination="yfR-oa-3UZ" id="crn-Wt-KKX"/>
                                     <outlet property="nameLabel" destination="UOG-FP-9X1" id="iGG-OS-cEA"/>
                                 </connections>
@@ -217,6 +252,11 @@
             <point key="canvasLocation" x="-1417" y="137"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="FW2-vC-x9G">
+            <size key="intrinsicContentSize" width="44" height="14.5"/>
+        </designable>
+    </designables>
     <resources>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -226,6 +266,9 @@
         </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
